--- a/packages/video_player/video_player/pubspec.yaml
+++ b/packages/video_player/video_player/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   video_player_android:
     git:
       url: https://github.com/ShareZore/packages.git
-      path: packages/video_player/video_player/video_player_android/
+      path: packages/video_player/video_player_android/
+      ref: f_video
 #    path: ../video_player_android
   video_player_avfoundation: ^2.2.17
   video_player_platform_interface: ">=6.1.0 <7.0.0"
